# arxiv-digest

./: .gitignore  README.md  pyproject.toml
src/arxiv_digest/: .env  __init__.py  arxiv_client.py  config.py  emailer.py  main.py  models.py  scheduler.py  storage.py  summarizer.py
